--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -408,7 +408,7 @@ For the nonmatch trials, we found the advantage of good character: Shapes associ
 
 To test the modulation effect of self-referential processing, we also modeled data from three experiments (3a, 3b, and 6b) with three-level Bayesian models. These three experiments included 108 unique participants. We focused on the population-level effect of the interaction between self-referential processing and moral valence. Also, we examined the differences of differences, i.e., how the differences between good/bad characters and the neutral character under the self-referential conditions differ from that under other-referential conditions. The detailed results of each experiment can be found in supplementary materials.
 
-For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition (\(median_{diff}\) = 0.52; 95\% HDI = {[}-1.54 2.72{]}). However, this is not the case for the bad-neutral differences (\(median_{diff}\) = -0.01; 95\% HDI = {[}-1.55 2.37{]}). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.57; 95\% HDI = {[}-0.93 2.88{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = 0.23; 95\% HDI = {[}-1.31 1.87{]}). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
+For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition: The difference (\(median_{diff}\) = 0.48, 95\% HDI {[}-0.62, 1.65{]}) has a 93.04\% probability of being positive (\textgreater{} 0), 91.92\% of being significant (\textgreater{} 0.05). However, the bad-neutral differences (\(median_{diff}\) = 0.0087, 95\% CI {[}-0.96, 1.00{]}) only has a 51.85\% probability of being positive (\textgreater{} 0), 41.29\% of being significant (\textgreater{} 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.54, 95\% CI {[}-0.30, 1.41{]}), with a 95.99\% probability of being positive (\textgreater{} 0), 95.36\% of being significant (\textgreater{} 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
 \begin{figure}
 \centering
